// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
    testID="padView"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#242424",
            "fontSize": 17,
          }
        }
        testID="listItemTitle"
      >
        List Title
      </Text>
    </View>
  </View>
</View>
`;

exports[`ListItem component should render with avatar 1`] = `
<View
  avatar={
    Object {
      "source": "avatar_uri",
    }
  }
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "peru",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</View>
`;

exports[`ListItem component should render with input 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <ListItemInput
      placeholder="Enter Text"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with left icon 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Themed.Icon
      color="red"
      name="wifi"
      size={20}
      type="font-awesome"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with left icon component 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Text>
      I'm left icon
    </Text>
  </PadView>
</View>
`;

exports[`ListItem component should render with right icon component 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Text>
      I'm right icon
    </Text>
  </PadView>
</View>
`;

exports[`ListItem component should render with switch 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderBottomWidth": 0.5,
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
        "paddingVertical": 8,
      }
    }
  >
    <Switch
      value={true}
    />
    <ListItemChevron />
  </PadView>
</View>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <ListItemContent>
      <ListItemTitle
        numberOfLines={5}
        style={
          Object {
            "backgroundColor": "peru",
          }
        }
      >
        title test
      </ListItemTitle>
      <ListItemSubtitle
        style={
          Object {
            "backgroundColor": "peru",
          }
        }
      >
        title test
      </ListItemSubtitle>
    </ListItemContent>
    <ListItemContent
      right={true}
    >
      <ListItemTitle
        right={true}
      >
        title
      </ListItemTitle>
    </ListItemContent>
  </PadView>
</View>
`;

exports[`ListItem component should render without issues 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</View>
`;
